--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://github.com/jeromelachaud/freelancer-theme
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+title: Po-Wei Huang
+email: abc1199281@gmail.com
+url: https://github.com/abc1199281/abc1199281.github.io
+description: "(WIP)Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+keywords: "image signal processor (ISP), functional model, computer Vision, Machine Learning"
+skills: "C++, python"
+meta_author: Huang Po-Wei
 
 # Google webmaster tools
 google_verify:
